Wed Oct  1 12:02:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2935_Regression/middle.cpp
        * tests/Bug_2935_Regression/sink_i.cpp
        * tests/Bug_2935_Regression/sink_i.h
        * tests/Bug_2935_Regression/source_i.cpp
        * tests/Bug_3068_Regression/client.cpp
        * tests/Bug_3068_Regression/server.cpp
        * tests/COIOP/Client_Task.cpp
        * tests/Collocation_Exception_Test/Client_Task.cpp
        * tests/Collocation_Oneway_Tests/Client_Task.cpp
        * tests/Collocation_Tests/Client_Task.cpp
        * tests/DII_Collocation_Tests/oneway/Client_Task.cpp
        * tests/DII_Collocation_Tests/oneway/Client_Task.h
        * tests/DII_Collocation_Tests/oneway/Server_Task.cpp
        * tests/DII_Collocation_Tests/oneway/Server_Task.h
        * tests/DII_Collocation_Tests/twoway/Client_Task.cpp
        * tests/DII_Collocation_Tests/twoway/Client_Task.h
        * tests/DII_Collocation_Tests/twoway/Server_Task.cpp
        * tests/DII_Collocation_Tests/twoway/Server_Task.h
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/Client_Task.cpp
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/Client_Task.cpp
          ACE_TCHAR fixes

Wed Oct  1 11:40:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Faults/pong.cpp
        * tests/MProfile/client.cpp
        * tests/MProfile_Connection_Timeout/client.cpp
        * tests/Multiple_Inheritance/client.cpp
        * tests/NestedUpcall/MT_Client_Test/client.cpp
        * tests/NestedUpcall/MT_Client_Test/client.h
        * tests/NestedUpcall/MT_Client_Test/local_server.cpp
        * tests/NestedUpcall/Triangle_Test/initiator.cpp
        * tests/NestedUpcall/Triangle_Test/server_B.cpp
        * tests/OBV/Simple/Simple_util.h
        * tests/POA/EndpointPolicy/server.cpp
        * tests/Portable_Interceptors/Bug_3079/client.cpp
        * tests/Portable_Interceptors/Collocated/Dynamic/Client_Task.cpp