@@ -48,7 +48,7 @@ Server<Servant>::parse_args (void)
         if (this->ior_output_file_ == 0)
           ACE_ERROR_RETURN ((LM_ERROR,
                              "Unable to open %s for writing: %p\n",
-                             ACE_TEXT_CHAR_TO_TCHAR (get_opts.opt_arg ())), -1);
+                             get_opts.opt_arg ()), -1);
         break;
 
       case 'n': //Use naming service
@@ -67,7 +67,7 @@ Server<Servant>::parse_args (void)
                            " [-i] <InterOperable Naming Service simple object key>"
                            " [-h (help)]"
                            "\n",
-                           ACE_TEXT_CHAR_TO_TCHAR (this->argv_ [0])),
+                           this->argv_ [0]),
                           -1);
       }
 
