@@ -20,7 +20,7 @@ Time_Date_Client_i::~Time_Date_Client_i (void)
 
 int
 Time_Date_Client_i::parse_args (int,
-                                char *[])
+                                ACE_TCHAR *[])
 {
   return 0;
 }
