@@ -39,7 +39,7 @@ public:
   virtual ~Time_Date_Client_i (void);
   // Destructor
 
-  virtual int run (const char *, int, char *[]);
+  virtual int run (const char *, int, ACE_TCHAR *[]);
   // Execute the methods.
 
   virtual int parse_args (int argc, ACE_TCHAR *argv[]);
